--- a/principal/templates/main/main_base.html
+++ b/principal/templates/main/main_base.html
@@ -18,7 +18,7 @@
     {% load staticfiles %}
 
     <meta charset="UTF-8">
-    <title>DCR DJANGO PROJECTS</title>
+    <title>MoodL</title>
     <link rel="stylesheet" type="text/css" href="{% static 'util/css/style.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <style>
