--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -1,6 +1,8 @@
-<form action="/new-entry/" method="post">
-  <label for="new_entry">How's it going? </label>
+<form action="/journal/get_entry/" method="post">
+  <!--<label for="new_entry">How's it going? </label>
   <input id="new_entry" type="text" name="new_entry" value="{{
-  current_entry }}">
+  current_entry }}">-->
+  {% csrf_token %}
+  {{ form }}
   <input type="submit" value="Submit Entry">
 </form>
