Sign Up button, and html page for signup

--- a/principal/templates/account/login.html
+++ b/principal/templates/account/login.html
@@ -26,6 +26,7 @@
 				        <div class="modal-footer">
                             <div class="container" align="center">
                                 <button style="width: auto" type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+                                <p><a href="signup.html">Sign Up</a> ?</p>
                             </div>
 				        </div>
                     </form>
