--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -14,6 +14,10 @@
     color: #fff;
     background-color: #3476b7;
 }
+canvas {
+  width: 500px !important;
+  height: 300px !important;
+}
 </style>
 
 <div id="demo" class="yui3-skin-sam yui3-g"> <!-- You need this skin class -->
@@ -31,6 +35,69 @@
    </div>
   </div>
 </div>
+
+<canvas id="chart"></canvas>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+  $( document ).ready(function() {
+    var anger = {{moods.anger}};
+    var disgust = {{moods.disgust}};
+    var fear = {{moods.fear}};
+    var joy = {{moods.joy}};
+    var sadness = {{moods.sadness}};
+
+    var chart = document.getElementById("chart");
+    var ctx = chart.getContext("2d");
+    var chartObj = new Chart(ctx, {
+      // The type of chart we want to create
+    type: 'bar',
+
+    // The data for our dataset
+    data: {
+       labels: ['Anger','Disgust','Fear','Joy','Sadness'],
+       datasets: [{
+           label: "My First dataset",
+           backgroundColor: [
+            'rgba(255, 99, 132,.6)',
+            'rgba(0,255,0,.4)',
+            'rgba(0,0,0,.4)',
+            'rgba(255,255,0,.6)',
+            'rgba(79,179,249,1)',
+            'rgb(0,255,255)',
+            'rgb(255,0,255)',
+          ],
+           borderColor: [
+             'rgb(255, 99, 132)',
+             'rgb(0,255,0)',
+             'rgb(0,0,0)',
+             'rgb(255,255,0)',
+             //'rgb(79,179,249)',
+             'rgb(0,0,0)',
+           ],
+           borderWidth: 2,
+           data: [anger,disgust,fear,joy,sadness],
+
+       }]
+   },
+    options: {
+     scales: {
+       yAxes: [{
+         ticks: {
+            fontSize: 40
+         }
+       }],
+       xAxes: [{
+         ticks: {
+           fontSize: 40
+         }
+       }]
+     }
+    },
+ });
+});
+</script>
 
 <script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
 <script type="text/javascript">
@@ -59,10 +126,10 @@ YUI().use('calendar', 'datatype-date', 'cssbutton',  function(Y) {
       // single selection is enabled by default,
       // we expect there to be only one date)
       var newDate = ev.newSelection[0];
-
       // Format the date and output it to a DOM
       // element.
-      Y.one("#selecteddate").setHTML(dtdate.format(newDate));
+      var date = dtdate.format(newDate);
+      Y.one("#selecteddate").setHTML(date);
     });
 
 
