Graph now generates labels semi-dynamically
I'm using moment.js to dynamically create a label list of the last 30 days, It can't do a different range yet

--- a/journal/templates/journal/get_entry/submitted.html
+++ b/journal/templates/journal/get_entry/submitted.html
@@ -1,2 +1,8 @@
 <h1>YOU HAVE SUBMITTED YOUR ENTRY. CARRY ON.</h1>
 <p>{{ user_id }}</p>
+
+{% for instance in data %}
+  {% for field, value in instance.fields.items %}
+    <p>{{field}}: {{value}}</p>
+  {% endfor %}
+{% endfor %}
