--- a/journal/templates/journal/graph.html
+++ b/journal/templates/journal/graph.html
@@ -1,6 +1,27 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script>
+  function getMonthFromString(mon){
+
+     var d = Date.parse(mon + "1, 2012");
+     if(!isNaN(d)){
+        return new Date(d).getMonth() + 1;
+     }
+     return -1;
+   }
+   function getLastXDays(numDays) {
+     var days = [];
+     for(var i = numDays; i >= 0; i--) {
+       console.log("\ni = " + i);
+       date = moment().subtract(i, 'days');
+       // console.log("\ntime(ms) = " + (Date.now()-(i*86400000)));
+       console.log("\ndate = " + date);
+       days[i] = date.date();
+     }
+     return days;
+   }
+
   var anger = {{moods.anger}};
   var disgust = {{moods.disgust}};
   var fear = {{moods.fear}};
@@ -10,13 +31,14 @@
   var c = 0;
 </script>
 <canvas id="chart"></canvas>
-<button id="line"
+<button id="line">Line</button>
+<h1>{{user_id}}</h1>
 <ul>
   {% for instance in data %}
     {% for field, value in instance.fields.items %}
-      <!-- <li>{{ field }}: {{ value }}</li> -->
+       <li>{{ field }}: {{ value }}</li>
       <script>
-        {% if field == "entry_text" or field == "submission_date" %}
+        {% if field == "entry_text" or field == "submission_date" or field == "user_ID" %}
           data[c]="{{value}}";
         {% else %}
           data[c] = {{value}};
@@ -78,19 +100,30 @@
      var label = chartData.labels[idx];
      var value = chartData.datasets[0].data[idx];
 
+     var daysArr = getLastXDays(30);
+     dateStr = data[2].replace(/,/g, '');
+     // alert(dateStr);
+     dateStr = dateStr.split(" ");
+     // alert(daysArr.toString());
+     dateObj = new Date();
+     // dateObj.yea
+     //alert(dateObj.toString());
+     var testArr = [];
+     for(var i=0;i<30;i++) testArr[i] = i;
      chartObj.destroy();
      chartObj = new Chart(ctx, {
        type: 'line',
        data: {
-         labels: ['1,2,3,4,5,6,7'],
+         labels: [daysArr.toString()],
          datasets: [{
            label: 'line',
            backgroundColor: ['rgb(0,0,0)'],
-           data: [1,2,3,4,5,6,7],
+           data: testArr,
          }]
        },
      });
-     barObj.update();
+
+     chartObj.update();
    }
  };
 });
