--- a/journal/templates/journal/graph.html
+++ b/journal/templates/journal/graph.html
@@ -1,11 +1,31 @@
-{% load staticfiles %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" href="{%static "css/journal.css" %}">
-
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script>
+  function getMonthFromString(mon){
+
+     var d = Date.parse(mon + "1, 2012");
+     if(!isNaN(d)){
+        return new Date(d).getMonth() + 1;
+     }
+     return -1;
+   }
+   function getLastXDays(numDays) {
+     var days = [];
+     for(var i = numDays; i >= 0; i--) {
+       console.log("\ni = " + i);
+       date = moment().subtract(i, 'days');
+       // console.log("\ntime(ms) = " + (Date.now()-(i*86400000)));
+       console.log("\ndate = " + date);
+       days[i] = date.date();
+     }
+     console.log("getLast30Days = " + days);
+     return days;
+   }
+   function getTotals() {
+     // for(var i = 2);
+   }
+
   var anger = {{moods.anger}};
   var disgust = {{moods.disgust}};
   var fear = {{moods.fear}};
@@ -13,15 +33,18 @@
   var sadness = {{moods.sadness}};
   var data = [];
   var c = 0;
+  var data = [];
 </script>
 <canvas id="chart"></canvas>
-<button id="line"
+<button id="lineButton">Line</button>
+<button id="barButton">Bar</button>
+<h1>{{user_id}}</h1>
 <ul>
   {% for instance in data %}
     {% for field, value in instance.fields.items %}
-      <!-- <li>{{ field }}: {{ value }}</li> -->
+       <li>{{ field }}: {{ value }}</li>
       <script>
-        {% if field == "entry_text" or field == "submission_date" %}
+        {% if field == "entry_text" or field == "submission_date" or field == "user_ID" %}
           data[c]="{{value}}";
         {% else %}
           data[c] = {{value}};
@@ -42,32 +65,35 @@
 
     var chart = document.getElementById("chart");
     var ctx = chart.getContext("2d");
+    var labelArr = ['Anger','Disgust','Fear','Joy','Sadness'];
+    var bgColors = [
+      'rgba(255, 99, 132,.6)',
+      'rgba(0,255,0,.4)',
+      'rgba(0,0,0,.4)',
+      'rgba(255,255,0,.6)',
+      'rgba(79,179,249,1)',
+      'rgb(0,255,255)',
+      'rgb(255,0,255)',
+    ];
+    var borderColors = [
+      'rgb(255, 99, 132)',
+      'rgb(0,255,0)',
+      'rgb(0,0,0)',
+      'rgb(255,255,0)',
+      //'rgb(79,179,249)',
+      'rgb(0,0,0)',
+    ]
     var chartObj = new Chart(ctx, {
       // The type of chart we want to create
     type: 'bar',
 
     // The data for our dataset
     data: {
-       labels: ['Anger','Disgust','Fear','Joy','Sadness'],
+       labels: labelArr,
        datasets: [{
            label: "My First dataset",
-           backgroundColor: [
-            'rgba(255, 99, 132,.6)',
-            'rgba(0,255,0,.4)',
-            'rgba(0,0,0,.4)',
-            'rgba(255,255,0,.6)',
-            'rgba(79,179,249,1)',
-            'rgb(0,255,255)',
-            'rgb(255,0,255)',
-          ],
-           borderColor: [
-             'rgb(255, 99, 132)',
-             'rgb(0,255,0)',
-             'rgb(0,0,0)',
-             'rgb(255,255,0)',
-             //'rgb(79,179,249)',
-             'rgb(0,0,0)',
-           ],
+           backgroundColor: bgColors,
+           borderColor: borderColors,
            borderWidth: 2,
            data: [anger,disgust,fear,joy,sadness],
        }]
@@ -83,22 +109,55 @@
      var label = chartData.labels[idx];
      var value = chartData.datasets[0].data[idx];
 
+     var daysArr = getLastXDays(30);
+     console.log("daysArr = " + daysArr);
+     dateStr = data[2].replace(/,/g, '');
+     // alert(dateStr);
+     dateStr = dateStr.split(" ");
+     // alert(daysArr.toString());
+     dateObj = new Date();
+     // dateObj.yea
+     //alert(dateObj.toString());
+     var testArr = [];
+     for(var i=0;i<30;i++) testArr[i] = i;
      chartObj.destroy();
      chartObj = new Chart(ctx, {
        type: 'line',
        data: {
-         labels: ['1','2','3','4','5','6','7'],
+
+         labels: daysArr,
          datasets: [{
            label: 'line',
+           backgroundColor: ['rgb(0,0,0)'],
+           data: testArr,
            fill: false,
-           borderColor: ['rgb(0,0,0)'],
-           data: [1,2,3,4,5,6,7],
          }]
        },
      });
-     barObj.update();
+
+     chartObj.update();
    }
  };
+ document.getElementById("barButton").onclick = function(evt) {
+   chartObj.destroy();
+   chartObj = new Chart(ctx, {
+     // The type of chart we want to create
+     type: 'bar',
+
+     // The data for our dataset
+     data: {
+        labels: labelArr,
+        datasets: [{
+            label: "My First dataset",
+            backgroundColor: bgColors,
+            borderColor: borderColors,
+            borderWidth: 2,
+            data: [anger,disgust,fear,joy,sadness],
+        }]
+    },
+  });
+  chartObj.update();
+};
 });
 
 </script>
