Graph color changes

--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -72,19 +72,19 @@ canvas {
        datasets: [{
            label: "My First dataset",
            backgroundColor: [
-            'rgba(255, 99, 132,.6)',
-            'rgba(0,255,0,.4)',
-            'rgba(0,0,0,.4)',
-            'rgba(255,255,0,.6)',
-            'rgba(79,179,249,1)',
+            'rgba(255, 99, 132,.8)', //anger
+            'rgba(0,255,0,.6)', //disgust
+            'rgba(153,51,204,.7)', //fear
+            'rgba(255,255,0,.7)', //joy
+            'rgba(79,179,249,.9)', //sadness
             'rgb(0,255,255)',
             'rgb(255,0,255)',
           ],
            borderColor: [
-             'rgb(255, 99, 132)',
-             'rgb(0,255,0)',
              'rgb(0,0,0)',
-             'rgb(255,255,0)',
+             'rgb(0,0,0)',
+             'rgb(0,0,0)',
+             'rgb(0,0,0)',
              //'rgb(79,179,249)',
              'rgb(0,0,0)',
            ],
