--- a/principal/static/css/journal.css
+++ b/principal/static/css/journal.css
@@ -15,13 +15,15 @@ body{
     height:200px;
     width: 650px;
     font-size:14pt;
+
 }
 #form{
   padding-left: 20px;
   padding-right: 70px;
   width: 650px;
-  float:left; /* add this */
+  float:left;
   //border: 1px solid red;
+  background-color: white;
 }
 #mycalendar{
   float: left;
@@ -30,4 +32,5 @@ body{
 }
 #chart{
   padding-left: 75px;
+  background-color: white;
 }
