--- a/journal/templates/journal/graph.html
+++ b/journal/templates/journal/graph.html
@@ -67,21 +67,21 @@
     var ctx = chart.getContext("2d");
     var labelArr = ['Anger','Disgust','Fear','Joy','Sadness'];
     var bgColors = [
-      'rgba(255, 99, 132,.6)',
-      'rgba(0,255,0,.4)',
-      'rgba(0,0,0,.4)',
-      'rgba(255,255,0,.6)',
-      'rgba(79,179,249,1)',
-      'rgb(0,255,255)',
-      'rgb(255,0,255)',
+    'rgba(255, 99, 132,.8)', //anger
+    'rgba(0,255,0,.6)', //disgust
+    'rgba(153,51,204,.7)', //fear
+    'rgba(255,255,0,.7)', //joy
+    'rgba(79,179,249,.9)', //sadness
+    'rgb(0,255,255)',
+    'rgb(255,0,255)',
     ];
     var borderColors = [
-      'rgb(255, 99, 132)',
-      'rgb(0,255,0)',
-      'rgb(0,0,0)',
-      'rgb(255,255,0)',
-      //'rgb(79,179,249)',
-      'rgb(0,0,0)',
+    'rgb(0,0,0)',
+    'rgb(0,0,0)',
+    'rgb(0,0,0)',
+    'rgb(0,0,0)',
+    //'rgb(79,179,249)',
+    'rgb(0,0,0)',
     ]
     var chartObj = new Chart(ctx, {
       // The type of chart we want to create
