--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -11,21 +11,16 @@
 <body>
 <!-- wrapper to get calendar and entry side by side-->
  <div id="wrapper">
-<form action="/journal/get_entry/" method="post" id="form">
-  {% csrf_token %}
-  <!--<textarea name="name" rows="8" cols="80"></textarea>
-  <input type="submit" value="Submit Entry">
-  <label for="new_entry">How's it going?<br> </label>
-  <input id="new_entry" type="text" name="new_entry" value="{{
-  current_entry }}">-->
-  <br>
-  {{ form }}
-
-  <br><pre>
-  <input type="submit" value="Submit Entry">
-  </pre>
-</form>
-<div id="calendar"></div>
+   <div id="box">
+   <form action="/journal/get_entry/" method="post" id="form">
+    {% csrf_token %}
+    <br>
+    {{ form }}
+    <pre>   <input id = "submit" type="submit" value="Submit Entry">
+    </pre>
+  </form>
+</div>
+<!-- Add an additional blue button style -->
 <style>
 #calendar {
   float: right;
@@ -38,10 +33,27 @@ canvas {
 }
 </style>
 
-<canvas id="chart"></canvas>
+<div id="demo" class="yui3-skin-sam yui3-g"> <!-- You need this skin class -->
 
+  <div id="leftcolumn" class="yui3-u">
+     <!-- Container for the calendar -->
+     <div id="mycalendar"></div>
+  </div>
+  <div id="rightcolumn" class="yui3-u">
+   <div id="links" style="padding-left:20px;">
+      <!-- The buttons are created simply by assigning the correct CSS class -->
+      <button id="togglePrevMonth" class="yui3-button">Toggle Previous Month's Dates</button><br>
+      <button id="toggleNextMonth" class="yui3-button">Toggle Next Month's Dates</button><br>
+      Selected date: <span id="selecteddate"></span>
+   </div>
+  </div>
+</div>
+</div>
+<div id="chartArea">
+<canvas id="chart"></canvas>
 <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
  <script>
   $( document ).ready(function() {
     var anger = {{moods.anger}};
@@ -107,5 +119,5 @@ datepicker.inline = true;
 datepicker.container = document.getElementById("calendar");
 datepicker.show();
 </script>
-
+</div>
 </body>
