--- a/principal/static/css/journal.css
+++ b/principal/static/css/journal.css
@@ -16,22 +16,47 @@ body{
     width: 650px;
     font-size:12pt;
     margin-left: 20px;
+    font-family: "Helvetica";
 
 }
-#form{
+#box{
   padding-left: 20px;
   padding-right: 70px;
   width: 650px;
   float:left;
   //border: 1px solid red;
+
+}
+#form{
+  padding-left: 5px;
+  width: 680px;
   background-color: white;
+  font-family: "Helvetica";
 }
 #mycalendar{
   float: left;
   //border: 1px solid green;
   overflow: hidden;
 }
-#chart{
+#chartArea{
   padding-left: 75px;
+
+}
+#chart{
   background-color: white;
+}
+#submit{
+  background-color: #008CBA;
+  border: 1px solid #008CBA;
+  border-radius: 4px;
+  padding: 9px 20px;
+  color: white;
+  transition-duration: 0.4s;
+}
+#submit:hover{
+  border: 1px solid #008CBA;
+  border-radius: 4px;
+  padding: 9px 20px;
+  background-color: white;
+  color: black;
 }
