get_entry is now new_entry
get_entry is now not working, use new_entry now

--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -125,10 +125,12 @@ var i = 0;
   i++;
 {% endfor %}
 datepicker.disabledDates = datesArr;
-datepicker.onSelect = function(checked){
-var state = (checked)?'selected':'unselected';
-alert(this.toLocaleDateString() + ' ' + state);
-};
+// datepicker.onSelect = function(checked){
+//   console.log(this);
+//   var state = (checked)?'selected':'unselected';
+//   alert(this.toLocaleDateString() + ' ' + checked);
+//   window.location.replace('get_entry', {{ user_id }}, this.toLocaleDateString);
+// };
 </script>
 </div>
 </body>
