--- a/principal/static/css/journal.css
+++ b/principal/static/css/journal.css
@@ -6,7 +6,7 @@ body{
 
 #wrapper{
   margin: auto;
-   padding-top: 25px;
+  padding-top: 20px;
   width: 1100px;
   //border: 1px solid black;
   overflow: hidden;
@@ -15,12 +15,12 @@ body{
     height:200px;
     width: 650px;
     font-size:12pt;
-    margin-left: 20px;
+    margin-left: 10px;
     font-family: "Helvetica";
 
 }
 #box{
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 70px;
   width: 650px;
   float:left;
@@ -33,10 +33,12 @@ body{
   background-color: white;
   font-family: "Helvetica";
 }
-#mycalendar{
-  float: left;
+#calendar{
+  float: right;
   //border: 1px solid green;
   overflow: hidden;
+  width: 350px;
+  height: 350px;
 }
 #chartArea{
   padding-left: 75px;
