--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -1,11 +1,39 @@
 {% load staticfiles %}
+
+
 <head>
+ <title>MoodL-UserLog</title>
+    <style>
+        h2 {
+            color: #7c795d;
+            font-family: 'Trocchi', serif;
+            font-size: 45px;
+            font-weight: normal;
+            line-height: 48px;
+            margin: 0;
+        }
+    </style>
+ <font face="verdana" color="white">Welcome, {{ request.user.get_username}}</font>
+        {% if request.user.is_authenticated %}
+            <form action="{% url 'logout' %}" method="post" class="form-inline my-2 my-lg-0">
+                {% csrf_token %}
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
+            </form>
+        {% else %}
+            <form class="form-inline my-2 my-lg-0">
+                {% csrf_token %}
+                <a style="color:white" href="#" class="btn btn-primary my-2 my-sm-0" role="button" data-toggle="modal"
+                   data-target="#login-modal">Login</a>
+            </form>
+        {% endif %}
 <link rel="stylesheet" href="{% static 'css/journal.css' %}">
 <link rel="stylesheet" href="{% static 'js/journal.js' %}">
 <link rel="stylesheet" href="{% static 'css/datepickk.min.css' %}">
 <!-- <img src="{% static "images/rocks.jpg" %}" alt="My image">
  -->
  <script src="{% static 'js/datepickk.min.js' %}"></script>
+
+
 
 </head>
 <body>
