made get_entry and new_entry dynamic
both now display the last submission made by the session's current user

--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -125,7 +125,7 @@ datepicker.onSelect = function(checked){
   console.log(this);
   var state = (checked)?'selected':'unselected';
   alert(this.toLocaleDateString());
-  window.location.replace('get_entry/'+this.toLocaleDateString());
+  window.location.replace('../get_entry/', this.toLocaleDateString);
 };
 </script>
 </div>
