log in before help, change about to help

--- a/principal/templates/help.html
+++ b/principal/templates/help.html
@@ -2,4 +2,5 @@
     <a class="btn btn-primary" href="/journal/new_entry" role="button">Back</a>
 
 </head>
+<title>MoodL-Help</title>
 <h1>About page</h1>
