get_spec_entry is now getting an int through the url

--- a/journal/templates/journal/get_entry.html
+++ b/journal/templates/journal/get_entry.html
@@ -101,17 +101,22 @@ canvas {
 var datepicker = new Datepickk();
 datepicker.inline = true;
 datepicker.container = document.getElementById("calendar");
-// /*Set highlight*/
-// datepicker.highlight = [highlight,highlight2];
-//
-// /*Get highlight*/
-// console.log(datepicker.highlight);
+/*Set highlight*/
+var highlight = {
+  start: new Date(2018,11,22),
+  end: new Date(2018,11,24),
+  backgroundColor: '#3faa56',
+  color: '#ffffff',
+};
+datepicker.highlight = [highlight];
+
+/*Get highlight*/
+console.log(datepicker.highlight);
 datepicker.show();
 datepicker.selectDate(new Date());
 datesArr = [];
 var i = 0;
 {% for val in dates %}
-  console.log("date: " + "{{val.submission_date}}");
   var dateStr = "{{ val.submission_date }}".replace(/,/g, '');
   dateStr = dateStr.split(' ');
   dateStr[0] = getMonthFromString(dateStr[0]);
@@ -119,12 +124,13 @@ var i = 0;
   console.log(datesArr[i]);
   i++;
 {% endfor %}
-datepicker.disabledDates = datesArr;
+// datepicker.disabledDates = datesArr;
 datepicker.onSelect = function(checked){
-  console.log(this);
+  // console.log("this: "+this);
+  // var date = new Date(this.toLocaleDateString());
   var state = (checked)?'selected':'unselected';
-  alert(this.toLocaleDateString());
-  window.location.replace('get_entry/'+this.toLocaleDateString());
+  // console.log("Date: "+date.valueOf());
+  window.location.replace('../get_spec_entry/'+this.valueOf());
 };
 </script>
 </div>
