--- a/journal/templates/journal/graph.html
+++ b/journal/templates/journal/graph.html
@@ -1,3 +1,4 @@
+<title>MoodL-Graph</title>
 <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -10,7 +11,7 @@
      }
      return -1;
    }
-   function getLastXDays(numDays) {
+  function getLastXDays(numDays) {
      var days = [];
      for(var i = numDays; i >= 0; i--) {
        console.log("\ni = " + i);
@@ -21,7 +22,7 @@
      }
      console.log("getLast30Days = " + days);
      return days;
-   }
+  }
    function getTotals() {
      // for(var i = 2);
    }
