--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -1,7 +1,11 @@
 {% load staticfiles %}
-
-
 <head>
+<link rel="stylesheet" href="{% static 'css/journal.css' %}">
+<link rel="stylesheet" href="{% static 'js/journal.js' %}">
+<link rel="stylesheet" href="{% static 'css/datepickk.min.css' %}">
+<!-- <img src="{% static "images/rocks.jpg" %}" alt="My image">
+ -->
+ <script src="{% static 'js/datepickk.min.js' %}"></script>
  <title>MoodL-UserLog</title>
     <style>
         h2 {
@@ -15,23 +19,24 @@
     </style>
             <form action="{% url 'logout' %}" method="post" class="form-inline my-2 my-lg-0">
                 {% csrf_token %}
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
+                <button id= "submit" class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
+                <a id="help" class="btn btn-primary" href="/about" role="button">Help?</a>
             </form>
-<a class="btn btn-primary" href="/about" role="button">Help?</a>
-
-<link rel="stylesheet" href="{% static 'css/journal.css' %}">
-<link rel="stylesheet" href="{% static 'js/journal.js' %}">
-<link rel="stylesheet" href="{% static 'css/datepickk.min.css' %}">
-<!-- <img src="{% static "images/rocks.jpg" %}" alt="My image">
- -->
- <script src="{% static 'js/datepickk.min.js' %}"></script>
-
-
 
 </head>
 <body>
-<!-- wrapper to get calendar and entry side by side-->
- <div id="wrapper">
+  <!-- Random background-->
+      <script type="text/javascript">
+        var dir = '/static/images/';
+        var size = 4;
+        var dict = {
+          1: "wood.jpg",
+          2: "panels.jpg",
+          3: "water.jpg",
+          4: "rocks.jpg"};
+        var random= Math.floor(Math.random() * size) + 1;
+        document.body.style.backgroundImage="url(" + dir + dict[random] + ")";
+      </script>
    <div id="box">
      <form action="/journal/new_entry/" method="post" id="form">
        {% csrf_token %}
@@ -41,12 +46,13 @@
        </pre>
      </form>
    </div>
+
   <div id="calendar"></div>
-  </div>
+
 <style>
 canvas {
-  width: 600px !important;
-  height: 300px !important;
+  width: 400px !important;
+  height: 250px !important;
 }
 </style>
 
