sign up and other stuff

--- a/principal/templates/signup.html
+++ b/principal/templates/signup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>MoodL</title>
+    <title>MoodL-SignUp</title>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
             </div>
             <div id="navbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="main/main_base">Return to Homepage</a></li>
+                    <li><a href="..">Return to Homepage</a></li>
                 </ul>
             </div>
         </div>
