--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -20,7 +20,7 @@
             <form action="{% url 'logout' %}" method="post" class="form-inline my-2 my-lg-0">
                 {% csrf_token %}
                 <button id= "submit" class="btn btn-secondary my-2 my-sm-0" type="submit">Logout</button>
-                <a id="help" class="btn btn-primary" href="/about" role="button">Help?</a>
+                <a id="help" class="btn btn-primary" href="/help" role="button">Help?</a>
             </form>
 
 </head>
