--- a/journal/templates/journal/get_entry.html
+++ b/journal/templates/journal/get_entry.html
@@ -37,8 +37,8 @@
         document.body.style.backgroundImage="url(" + dir + dict[random] + ")";
       </script>
 <div id="box">
-   <div id="form" style= "height: 400px">
-     <p>{{ moods.entry_text }}</p>
+   <div id="form" style= "height: 510px">
+     <p id= "old_text" style="background-color:white">{{ moods.entry_text }}</p>
    </div>
 </div>
   <div id="calendar"></div>
