--- a/journal/templates/journal/new_entry.html
+++ b/journal/templates/journal/new_entry.html
@@ -88,7 +88,7 @@ canvas {
     data: {
        labels: ['Anger','Disgust','Fear','Joy','Sadness'],
        datasets: [{
-           label: "My First dataset",
+           label: "Moods",
            backgroundColor: [
             'rgba(255, 99, 132,.8)', //anger
             'rgba(0,255,0,.6)', //disgust
