--- a/principal/templates/signup.html
+++ b/principal/templates/signup.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
     <title>MoodL-SignUp</title>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body class="override">
@@ -25,7 +25,7 @@
     <footer>
         <div class="container">
             <div class="row well ml-t">
-                <div class="col-lg-8 col-md-8">     
+                <div class="col-lg-8 col-md-8">
                     <h4>SIGN UP </h4>
                 </div>
             </div>
@@ -73,7 +73,7 @@
 									</div>
 									<br />
 									<div class="form-group">
-										<button type="submit" class="btn btn-primary form-control">Sign Up</button>
+										<button id="submit" class="btn btn-primary form-control" href="/journal/new_entry" role="button">Sign Up</button>
 									</div>
 								</div>
 							</form>
